--- a/Ve2D/Ve2D.vcxproj
+++ b/Ve2D/Ve2D.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="FinGe.cpp" />
+    <ClCompile Include="F_ShapeGen.cpp" />
     <ClCompile Include="misc.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -98,6 +99,9 @@
   <ItemGroup>
     <ClInclude Include="FinGe.h" />
     <ClInclude Include="Form1.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="F_ShapeGen.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="misc.h" />
@@ -111,6 +115,9 @@
     <EmbeddedResource Include="Form1.resX">
       <DependentUpon>Form1.h</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_ShapeGen.resx">
+      <DependentUpon>F_ShapeGen.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
